added JavaFX dashboard UI and configure module path